# algorithms

./: Cargo.toml  Makefile  README.md
algorithms_buffer_utils/: Cargo.toml
algorithms_buffer_utils/src/: lib.rs  split.rs
algorithms_buffer_utils/tests/: find_byte_index.rs  max_subarray.rs  split_by_byte.rs
algorithms_core/: Cargo.toml
algorithms_core/src/: heap.rs  lib.rs  queues.rs
algorithms_core/tests/: heap.rs  queue_circular.rs  queue_max_priority.rs  queue_min_priority.rs
algorithms_hash/: Cargo.toml
algorithms_hash/src/: cityhash.rs  crc.rs  lib.rs  pearson.rs
algorithms_hash/tests/: hash_city.rs  hash_crc.rs  hash_murmur3.rs
algorithms_random/: Cargo.toml
algorithms_random/src/: hardware.rs  lib.rs  pcg.rs
algorithms_sort/: Cargo.toml
algorithms_sort/src/: heap_sort.rs  insertion_sort.rs  merge_sort.rs  quick_sort.rs
algorithms_sort/tests/: sorting_bubble.rs  sorting_heap.rs  sorting_insertion.rs  sorting_merge.rs  sorting_quick.rs
benches/: buffer_utils_benchmark.rs  crc32c_benchmark.rs  find_byte_benchmark.rs
benchmark/: Cargo.toml
results/: murmur3a-rust-ffi.txt  murmur3a.txt  murmur3f-rust-ffi.txt  murmur3f.txt
src/: find_byte_index.rs  hash.rs  heap.rs  lcg.rs  lib.rs  max_sub_array.rs  normalize.rs  queues.rs  random.rs  sorting.rs
tests/: find_byte_index.rs  hash_city.rs  hash_crc.rs  hash_murmur3.rs  heap.rs  max_subarray.rs  queue_circular.rs  queue_max_priority.rs  queue_min_priority.rs  queues.rs  sorting.rs  sorting_bubble.rs  sorting_heap.rs  sorting_insertion.rs  sorting_merge.rs  sorting_quick.rs  split_by_byte.rs
(+35 files in other folders)
