[package]
name = "algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bench]]
name = "crc32c_benchmark"
harness = false

# [lib]
# crate-type =["staticlib"]

[profile.release]
opt-level=3
codegen = 1

[dependencies]

[dev-dependencies]
criterion = "0.5.1"
